Fixed scrollbar corner issue

--- a/styles/scrollbars.less
+++ b/styles/scrollbars.less
@@ -17,7 +17,7 @@
     }
 
     ::-webkit-scrollbar-corner {
-
+      display: none;
     }
 }
 
